Fix login page buttons to align correctly in IE/Edge

--- a/mdc-101/complete/app.scss
+++ b/mdc-101/complete/app.scss
@@ -30,8 +30,9 @@ body {
 }
 
 .button-container {
+  display: flex;
+  justify-content: flex-end;
   width: 300px;
-  text-align: end;
   margin: auto;
 }
 
