--- a/mdc-102/complete/app.scss
+++ b/mdc-102/complete/app.scss
@@ -33,8 +33,9 @@ body {
 }
 
 .button-container {
+  display: flex;
+  justify-content: flex-end;
   width: 300px;
-  text-align: end;
   margin: auto;
 }
 
